fix: height issue on mobile

--- a/src/features/chat/Chat.scss
+++ b/src/features/chat/Chat.scss
@@ -1,6 +1,5 @@
 .chat {
   display: flex;
-  height: 100vh;
   background: #fff;
   overflow: hidden;
 }
