--- a/src/features/chat/components/ChatSender/ChatSender.scss
+++ b/src/features/chat/components/ChatSender/ChatSender.scss
@@ -4,6 +4,7 @@
   align-items: center;
 
   padding: 1rem;
+  height: 60px;
   background: #fff;
 }
 
